[package]
name = "maxwell"
version = "0.1.0"
authors = ["Andres Lamont <alamont@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# lto = true

[dependencies]
image = "0.23"
rand = "0.7"
rayon = "1.3"
nalgebra = "0.21.0"
minifb = "0.16.0"
exr = "0.7.4"
smallvec = "1.4.0"
dyn-clone = "1.0.1"
